# swagger.yaml
@@ -7,6 +7,70 @@ servers:
   - url: http://localhost:3000/
   - url: https://kadinhepp-7229fba7916e.herokuapp.com
 paths:
+  /:
+    get:
+      summary: Get posts based on logged in user's location
+      description: Retrieve posts based on the location of the logged-in user.
+      responses:
+        '200':
+          description: A list of posts based on the user's location
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                  data:
+                    type: array
+                    items:
+                      $ref: '#/components/schemas/Post'
+        '500':
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                  error:
+                    type: string 
+  /post/{category}:
+    get:
+      summary: Get posts by logged in user's location and category
+      parameters:
+        - in: path
+          name: category
+          required: true
+          description: The category of the posts to retrieve
+          schema:
+            type: string
+      responses:
+        "200":
+          description: Successful response
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                  data:
+                    type: array
+                    items:
+                      $ref: "#/components/schemas/Post"
+        "500":
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                  error:
+                    type: string
   /user/register:
     post:
       summary: Create a new user
@@ -71,26 +135,61 @@ paths:
   /post/createPost:
     post:
       summary: Create a new post
-      description: Create a new post with the provided information.
       requestBody:
         required: true
         content:
-          application/json:
+          multipart/form-data:
             schema:
               type: object
               properties:
                 content:
                   type: string
-                  description: The content of the post.
                 category:
                   type: string
-                  description: The category of the post.
-              required:
-                - content
+                location:
+                  type: string
+                images:
+                  type: array
+                  items:
+                    type: string
+                    format: binary
       responses:
-        "201":
-          description: Post successfully created.
-        "400":
-          description: Bad request. Some required fields are missing or invalid.
-        "500":
-          description: Internal server error.
+        '201':
+          description: Created
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                  data:
+                    $ref: '#/components/schemas/Post'
+        '500':
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                  error:
+                    type: string
+components:
+  schemas:
+    Post:
+      type: object
+      properties:
+        user:
+          type: string
+        content:
+          type: string
+        category:
+          type: string
+        location:
+          type: string
+        photo:
+          type: array
+          items:
+            type: string
